# osal

./: CMakeLists.txt  Makefile
targets/freertos/: os_hw.h  os_task.c
targets/freertos/chip/: os_port.h
targets/posix/: os_utils.h
targets/rt-thread/: os_hw.h  os_mutex.c  os_queue.c  os_sem.c  os_task.c  os_timer.c
targets/rt-thread/chip/: os_port.h
targets/zephyr/: CMakeLists.txt  prj.conf  run.sh
tests/: Makefile  TestRing
