cmake_minimum_required(VERSION 3.22)

# Specify generator

# Debug message
message("Entering ${CMAKE_CURRENT_LIST_DIR}/CMakeLists.txt")
message("==================================================================================================")


idf_component_register( SRC_DIRS        "./targets/freertos"
                        INCLUDE_DIRS    "./include" "./targets/freertos/")
message("==================================================================================================")
message("Exiting ${CMAKE_CURRENT_LIST_DIR}/CMakeLists.txt")